--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@ version = 7.6.1
 description=Bot protection system for Minecraft servers.
 
 org.gradle.caching=true
+org.gradle.configuration-cache=true
 org.gradle.parallel=true
